--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -128,8 +128,6 @@
 @PART[Eland90BTurret]:NEEDS[SMA] {
 	@title = Eland 90B
 }
-
-
 @PART[FV510Hull]:NEEDS[SMA] {
 	@title = FV 510 Warrior
 	@description = The Warrior tracked vehicle family is a series of British armoured vehicles, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
@@ -137,6 +135,67 @@
 @PART[FV510Turret]:NEEDS[SMA] {
 	@title = FV 510 Warrior
 	@description = The Warrior tracked vehicle family is a series of British armoured vehicles featuring a 30 mm L21A1 RARDEN cannon, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
+}
+@PART[Humvee]:NEEDS[SMA] {
+	@title = HMMWV
+}
+@PART[mk19Turret]:NEEDS[SMA] {
+	@title = Mk. 19 Grenade launcher
+    @description = The Mk 19 grenade launcher is an American 40 mm belt-fed automatic grenade launcher that was first developed during the Vietnam War.
+}
+@PART[HVUA30CG]:NEEDS[SMA] {
+	@title = M240E1 GPMG
+    @description = The M240, officially the Machine Gun, 7.62 mm, M240, is the U.S. military designation for the FN MAG belt-fed, gas-operated medium machine guns. The M240 has been used extensively by infantry, most often in rifle companies, as well as on ground vehicles, watercraft and aircraft.
+}
+@PART[KUB2K12]:NEEDS[SMA] {
+	@title = 2K12 Kub Hull
+	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
+}
+@PART[KUB2K12launcher]:NEEDS[SMA] {
+	@title = 2K12 Kub
+	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
+}
+@PART[Leopard2A6]:NEEDS[SMA] {
+	@title = Leopard 2A6
+    @description = The Leopard 2A6 introduced in 2007 includes the addition of the Rheinmetall 120 mm L/55 smoothbore gun and other changes.
+}
+@PART[M1SMA]:NEEDS[SMA] {
+	@title = M1A1 Abrams
+	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. It featured a new pressurized NBC system, rear bustle rack for improved stowage of supplies and crew belongings, redesigned blow-off panels and M256 120 mm smoothbore cannon.
+}
+//ADD CASE explosions to the turrets!!!
+@PART[M1SM1Turret]:NEEDS[SMA] {
+	@title = M1 Abrams
+	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. M1 was the first production variant. Production began in 1979 and continued to 1985. It featured 105 mm L/52 M68A1 rifled gun with 55 shells.
+}
+@PART[M113Hull]:NEEDS[SMA] {
+	@title = M113 APC
+	@description = The M113 is a fully tracked armored personnel carrier that was developed and produced by the Food Machinery and Chemical Corporation. It was largely known as an "APC" or an "ACAV" (armored cavalry assault vehicle) by the allied forces.
+}
+//TODO check what gun it is actually
+@PART[M113GunTurret]:NEEDS[SMA] {
+	@title = M113 APC Gun
+	@description = The M113 is a fully tracked armored personnel carrier that was developed and produced by the Food Machinery and Chemical Corporation. It was largely known as an "APC" or an "ACAV" (armored cavalry assault vehicle) by the allied forces.
+}
+@PART[M163VADS]:NEEDS[SMA] {}
+@PART[AFVFlareCM]:NEEDS[SMA] {
+    @title = Flare dispenser.
+}
+//Add smoke dispenser
+@PART[MissileErektor]:NEEDS[SMA] {
+    @title = 9P117 Strategic Missile Launcher.
+    @description = A 9P117 system used on the MAZ-543 "Uragan" launch vehicle for standing up and firing large ballastic style missiles.
+
+}
+//Find what shape the Scud has to determine version
+@PART[SkudD]:NEEDS[SMA] {
+    @title = 8A61 Zemlya
+    @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" was a Soviet tactical ballistic missile. It was the first of several similar Soviet missiles to be given the reporting name Scud.
+}
+@PART[MK141GMLS]:NEEDS[SMA] {
+    @title = Mk. 141 GMLS
+
+    @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" was a Soviet tactical ballistic missile. It was the first of several similar Soviet missiles to be given the reporting name Scud.
 }
 
 
@@ -167,22 +226,9 @@
 	@title = T-80B
 	@description = T-90B is a Russian Federation main battle tank equipped with 125mm 2A46-2 smoothbore gun.
 }
-@PART[KUB2K12]:NEEDS[SMA] {
-	@title = 2K12 Kub Hull
-	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
-}
-@PART[KUB2K12launcher]:NEEDS[SMA] {
-	@title = 2K12 Kub
-	@description = MMZ 2K12 "Kub" (SA-6) "Gainful" mobile surface-to-air missile system is a Soviet low to medium-level air defence system designed to protect ground forces from air attack. Each 2K12 battery consisted of a number of similar tracked vehicles, one of which carries 25 kW G/H band radar. The battery usually also includes four triple-missile transporter erector launchers (TELs), and four trucks, each carrying three spare missiles and a crane.
-}
-@PART[M1SMA]:NEEDS[SMA] {
-	@title = M1A1 Abrams
-	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
-}
-@PART[M1SM1Turret]:NEEDS[SMA] {
-	@title = M1 Abrams
-	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
-}
+
+
+
 @PART[S125Launcher]:NEEDS[SMA] {
 	@title = 5V24/V-600 System 125 TEL
 	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
