SMA Optimalization continued.

--- a/EW/Balancing/MM_KerbalField.cfg
+++ b/EW/Balancing/MM_KerbalField.cfg
@@ -37,8 +37,8 @@
 	}
 }
 @PART[KORD]:NEEDS[SMA] {
-	@title = Kord HMG
-	@description = The Kord-12.7 mm heavy machine gun is a Russian design that entered service in 1998, replacing the older NSV machine gun.
+	@title = 6P49 Kord HMG
+	@description = The 6P49 Kord-12.7 mm heavy machine gun is a Russian design that entered service in 1998, replacing the older NSV machine gun.
 	@MODULE[ModuleWeapon] {
 		%shortName = KORD HMG
 		@bulletType = 12.7x108mmBullet
@@ -73,9 +73,9 @@
 	}
 }
 @PART[ShVAK-E]:NEEDS[SMA] {
-	@title = ShVAK MG
+	@title = 56-P-533 ShVAK MG
 	@MODULE[ModuleWeapon] {
-		%shortName = ShVAK MG
+		%shortName = 56-P-533 ShVAK MG
 		@bulletType = 20x99mmBZShell; 20x99mmOZShell
 	}
 }
