--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -1,9 +1,3 @@
-
-//Accuracy fix
-@ROCKET[8KOMS]:NEEDS[SMA] {
-	@thrustDeviation = 0.015
-}
-
 //Radars, descriptions and overall update to new BDA standards.
 
 @PART[M163VADS]:NEEDS[SMA] {
@@ -22,8 +16,8 @@
     }
 }
 @PART[ShilkaZSU234turret]:NEEDS[SMA] {
-	@title = ZSU-23-4 Shilka
-	@description = ZSU-23-4 "Shilka" four 23 mm autocannons, radar guided Anti-aircraft gun, also effective at destroying light ground targets and parts of larger vehicles. It uses 1RL33 (RPK-2 "Tobol") Radar.
+	@title = 2A6 ZSU-23-4 Shilka
+	@description = The 2A6 ZSU-23-4 "Shilka" four 23 mm autocannons, radar guided Anti-aircraft gun, also effective at destroying light ground targets and parts of larger vehicles. It uses 1RL33 (RPK-2 "Tobol") Radar.
     @MODULE[ModuleRadar] {
 		@radarName = 1RL33 (RPK-2 "Tobol") Radar
 		@directionalFieldOfView = 60
@@ -70,11 +64,11 @@
 }
 @PART[AK100a18]:NEEDS[SMA] {
 	@title = AK-100
-	@description = The AK-100 is a Soviet 100mm naval cannon, with a maximum rate of fire of 60 rounds per minute, firing a 26.8 kg munition in HE anti-air or HE fragmentation varieties. Equipped on patrol ships of project 1135, project 1154, anti-submarine ships of project 1155, nuclear cruiser Admiral Ushakov and Admiral Gorshkov-class frigate.
+	@description = The AK-100 system with a A-214 Soviet 100mm naval cannon, with a maximum rate of fire of 60 rounds per minute, firing a 26.8 kg munition in HE anti-air or HE fragmentation varieties. Equipped on patrol ships of project 1135, project 1154, anti-submarine ships of project 1155, nuclear cruiser Admiral Ushakov and Admiral Gorshkov-class frigate.
 }
 @PART[AK130turret]:NEEDS[SMA] {
 	@title = AK-130
-	@description = The AK-130 Russian-built 130mm naval cannon is one of the most powerful gun systems used in the world today, with a maximum rate of fire of 80 rounds per minute, firing a 33 kg munition in HE anti-air or HE fragmentation varieties.
+	@description = The AK-130 system with a A-217 Russian-built 130mm naval cannon is one of the most powerful gun systems used in the world today, with a maximum rate of fire of 80 rounds per minute, firing a 33 kg munition in HE anti-air or HE fragmentation varieties.
 }
 @PART[AK230]:NEEDS[SMA] {
 	@title = AK-230
@@ -82,7 +76,7 @@
 }
 @PART[AK639QB1]:NEEDS[SMA] {
 	@title = AK-630
-	@description = The AK-630 is a Soviet and Russian fully automatic naval close-in weapon system based on a six-barreled 30 mm rotary cannon. In "630", "6" means 6 barrels and "30" means 30 mm. The system's primary purpose is defense against anti-ship missiles and other precision guided weapons. However it can also be employed against fixed or rotary wing aircraft, ships and other small craft, coastal targets, and floating mines.
+	@description = The AK-630/A-213 is a Soviet and Russian fully automatic naval close-in weapon system based on a six-barreled 30 mm АО-18/GSh-6-30K rotary cannon. In "630", "6" means 6 barrels and "30" means 30 mm. The system's primary purpose is defense against anti-ship missiles and other precision guided weapons. However it can also be employed against fixed or rotary wing aircraft, ships and other small craft, coastal targets, and floating mines.
 }
 @PART[AK230LowPlinth]:NEEDS[SMA] {
 	@title = AK-230/630 Low Plinth
@@ -91,15 +85,15 @@
 	@title = AK-230/630 Tall Plinth
 }
 @PART[APC30Cg2A42]:NEEDS[SMA] {
-	@title = 2A42
-	@description = Shipunov 2A42 is a Soviet/Russian 30 mm autocannon used on BMP-2, BMP-3, BMD as well as BTR series of APCs and Attack Helicopters.
+	@title = 2A42 TKB-648
+	@description = Shipunov 2A42 TKB-648 30mm automatic cannon is a Soviet/Russian gun used on BMP-2, BMP-3, BMD as well as BTR series of APCs and Attack Helicopters.
 }
 @PART[BMP75mmTurret]:NEEDS[SMA] {
 	@title = BMP-1
 	@description = BMP-1 is a Soviet amphibious tracked infantry fighting vehicle with 73 mm 2A28 "Grom" low pressure smoothbore semi-automatic gun usually equipped with ATGMs and full of trained soviet soldiers.
 	
 	@MODULE[ModuleWeapon] {
-		%shortName = BMP 3 75mm
+		%shortName = 2A28 "Grom" 73mm
 		@bulletType = 76.2MMMHEATFS
 	}
 }
@@ -138,14 +132,15 @@
 }
 @PART[Humvee]:NEEDS[SMA] {
 	@title = HMMWV
+	-MODULE[ModuleRadar] {}
 }
 @PART[mk19Turret]:NEEDS[SMA] {
 	@title = Mk. 19 Grenade launcher
     @description = The Mk 19 grenade launcher is an American 40 mm belt-fed automatic grenade launcher that was first developed during the Vietnam War.
 }
 @PART[HVUA30CG]:NEEDS[SMA] {
-	@title = M240E1 GPMG
-    @description = The M240, officially the Machine Gun, 7.62 mm, M240, is the U.S. military designation for the FN MAG belt-fed, gas-operated medium machine guns. The M240 has been used extensively by infantry, most often in rifle companies, as well as on ground vehicles, watercraft and aircraft.
+	@title = GAU-19/A
+    @description = The GAU-19/A (GECAL 50) is an electrically-driven, three-barrel rotary heavy machine gun that fires the .50 BMG (12.7×99mm) cartridge.
 }
 @PART[KUB2K12]:NEEDS[SMA] {
 	@title = 2K12 Kub Hull
@@ -174,37 +169,65 @@
 }
 //TODO check what gun it is actually
 @PART[M113GunTurret]:NEEDS[SMA] {
-	@title = M113 APC Gun
-	@description = The M113 is a fully tracked armored personnel carrier that was developed and produced by the Food Machinery and Chemical Corporation. It was largely known as an "APC" or an "ACAV" (armored cavalry assault vehicle) by the allied forces.
+	@title = M240E1 GPMG
+    @description = The M240, officially the Machine Gun, 7.62 mm, M240, is the U.S. military designation for the FN MAG belt-fed, gas-operated medium machine guns. The M240 has been used extensively by infantry, most often in rifle companies, as well as on ground vehicles, watercraft and aircraft.
 }
 @PART[M163VADS]:NEEDS[SMA] {}
 @PART[AFVFlareCM]:NEEDS[SMA] {
     @title = Flare dispenser.
 }
-//Add smoke dispenser
++PART[AFVFlareCM]:NEEDS[SMA] {
+	@name = AFVSmokeCM
+	@title = Smoke dispenser.
+	MODULE[CMDropper] {
+		countermeasureType = smoke
+		ejectVelocity = 8
+	}
+}
 @PART[MissileErektor]:NEEDS[SMA] {
     @title = 9P117 Strategic Missile Launcher.
-    @description = A 9P117 system used on the MAZ-543 "Uragan" launch vehicle for standing up and firing large ballastic style missiles.
-
+    @description = A 9P117 self-propelled launcher used on the TRK 9K72/MAZ-543 "Uragan" launch vehicle for standing up and firing large ballistic style missiles.
 }
-//Find what shape the Scud has to determine version
 @PART[SkudD]:NEEDS[SMA] {
     @title = 8A61 Zemlya
     @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" was a Soviet tactical ballistic missile. It was the first of several similar Soviet missiles to be given the reporting name Scud.
 }
 @PART[MK141GMLS]:NEEDS[SMA] {
     @title = Mk. 141 GMLS
-
     @description = The OKB-1 8A61/R-11 "Zemlya" (SS-1B) "Scud" was a Soviet tactical ballistic missile. It was the first of several similar Soviet missiles to be given the reporting name Scud.
 }
-
-
-@PART[ShilkaZSUHull]:NEEDS[SMA] {
-	@title = ZSU-23-4 Shilka Hull
-	@description = ZSU-23-4 "Shilka" vehicle hull.
+@PART[P1KSLT]:NEEDS[SMA] {
+    @title = PU CM-248 Launcher
+    @description = The PU CM-248 Launcher created solely for the purpose of arming ships with the P-1000 Vulkan or other similar sized missiles.  Warranty void if anything except missiles are mounted.  To enable the turret, select the mounted missile from the weapon manager.
 }
-@PART[Humvee]:NEEDS[SMA] {
-	-MODULE[ModuleRadar] {}
+@PART[P1K2SLT]:NEEDS[SMA] {
+    @title = PU CM-248 Launcher
+    @description = The PU CM-248 Launcher created solely for the purpose of arming ships with the P-1000 Vulkan or other similar sized missiles.  Warranty void if anything except missiles are mounted.  To enable the turret, select the mounted missile from the weapon manager.
+}
+@PART[AFVeraSkirtMK1]:NEEDS[SMA] {
+    @title = ERA Skirt
+}
+@PART[ReactivePanelPrototype]:NEEDS[SMA] {
+    @title = ERA Panel
+}
+@PART[ReactivePanelPrototypeS]:NEEDS[SMA] {
+    @title = ERA Panel
+}
+@PART[S125Launcher]:NEEDS[SMA] {
+	@title = 5V24 System-125 TEL
+	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
+}
+@PART[ShilkaZSUHull]:NEEDS[SMA] {
+	@title = 2A6 ZSU-23-4 Shilka Hull
+	@description = The 2A6 ZSU-23-4 "Shilka" vehicle hull.
+}
+@PART[SMsT80Turret]:NEEDS[SMA] {
+	@title = T-80B
+	@description = T-90B is a Russian Federation main battle tank equipped with 125mm 2A46-2 smoothbore gun.
+}
+@PART[T90MS]:NEEDS[SMA] {
+	@title = T-90AM
+	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
 }
 @PART[SMTunguskaAAMT]:NEEDS[SMA] {
 	@title = 2K22 Tunguska
@@ -218,22 +241,6 @@
 	@title = 9M120 Ataka
 	@description = KBM 9M120 "Ataka" (AT-9) "Spiral-2" is a Beam riding SACLOS missile designed to defeat tanks with composite armour and explosive reactive armor.
 }
-@PART[T90MS]:NEEDS[SMA] {
-	@title = T-90AM
-	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
-}
-@PART[SMsT80Turret]:NEEDS[SMA] {
-	@title = T-80B
-	@description = T-90B is a Russian Federation main battle tank equipped with 125mm 2A46-2 smoothbore gun.
-}
-
-
-
-@PART[S125Launcher]:NEEDS[SMA] {
-	@title = 5V24/V-600 System 125 TEL
-	@description = A turret capable of holding and firing up to 2 missiles. Warranty void if anything except missiles are mounted. To enable the turret, select the mounted missile from the weapon manager.
-}
-
 
 //Complete part overhauls.
 
@@ -404,7 +411,7 @@
 	@subcategory = 0
 	@title = 5V24 Neva
 	@manufacturer = SM Armory Missiles
-	@description = 5V24 "Neva" (SA-3) "Goa" of the S-125 System is a medium range high speed guided surface to air missile. 
+	@description = 5V24 "Neva" (SA-3) "Goa" Surface-to-Air missile of the S-125 System. 
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	@attachRules = 1,1,0,0,1
