--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -180,8 +180,11 @@
 	@name = AFVSmokeCM
 	@title = Smoke dispenser.
 	MODULE[CMDropper] {
-		countermeasureType = smoke
-		ejectVelocity = 8
+		@countermeasureType = smoke
+		@ejectVelocity = 8
+	}
+	RESOURCE[CMFlare] {
+		@name = CMSmoke
 	}
 }
 @PART[MissileErektor]:NEEDS[SMA] {
