--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -128,7 +128,7 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = aam_AIM7E, aam_AIM9D, aam_R3R, aam_R-3, aam_R530 ,aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C ,sam_9K32, sam_9M8, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, sam_5V21, ssm_9M14, ssm_Swingfire, 4K40Termit, S125NevaMissile, SkudD, BristolBloodhound
+			value = aam_AIM7E, aam_AIM9D, aam_R3R, aam_R-3, aam_R530 ,aam_R530E, aam_R98R, aam_R98T, aam_RedTop, agm_AGM12C, agm_AGM28, agm_AGM45, agm_Kh22, agm_Kh66, agm_KSR2, agm_RB04C, sam_9M32, sam_3M8, sam_BloodhoundMk2, sam_GWS20, sam_Masurca, sam_MIM23, sam_MIM72, sam_RIM24, sam_RIM8, sam_5V21, ssm_9M14, ssm_Swingfire, 4K40Termit, S125NevaMissile, SkudD, BristolBloodhound
 		}
     }	
 	FILTER {
