--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -221,7 +221,7 @@
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@mass = 0.6
-	@description = Small air radar with weak performance against its peers, but its low power consumption means that it can be mounted on older airframes. Range limited to 20km. It was used on MiG-21s.
+	@description = The RP-21 "Sapfir" ("Spin Scan") Small air radar with weak performance against its peers, but its low power consumption means that it can be mounted on older airframes. Range limited to 20km. It was used on MiG-21s.
 	
 	@MODULE[ModuleRadar] {
 		radarName = RP-21 Targeting Radar
@@ -483,9 +483,9 @@ category = none
 bdacategory = Radars
 subcategory = 0
 bulkheadProfiles = srf
-title = P-15 Tropa Surveillance Radar
+title = 1RL13M P-15 Tropa Surveillance Radar
 manufacturer = Kerbal Kombat Anthology
-description = P-15 "Tropa" (Flat Face A) is a small surveillance radar that is suitable for mobile SAM sites. Maximum detection and lock range is 150km.
+description = The 1RL13M/P-15 "Tropa" (Flat Face A) is a small surveillance radar that is suitable for mobile SAM sites. Maximum detection and lock range is 150km.
 attachRules = 0,1,0,0,1
 
 // --- standard part parameters ---
@@ -703,10 +703,10 @@ MODULE {
 //60s P-40 Armour
 +PART[NAS_RA_21GoKai2_IJN]:NEEDS[NAS] {
 	@name = surv_p40
-	@title = P-40 Armour Surveillance Radar
+	@title = 1S12 P-40 Armour Surveillance Radar
 	@bdacategory = Radars
 	@rescaleFactor = 3
-	@description = Mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
+	@description = The 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	
@@ -925,12 +925,12 @@ MODULE {
 //50s P-12
 +PART[NAS_RA_21GoKai2_IJN]:NEEDS[NAS] {
 	@name = search_p12
-	@title = P-12 Yenisei Search Radar
+	@title = 1RL14 P-12 Yenisei Search Radar
 	@bdacategory = Radars
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 2.4
-	@description = P-12 Yenisei (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
+	@description = The 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-12 Search Radar
@@ -966,12 +966,12 @@ MODULE {
 }
 +PART[scanLockRadar1]:NEEDS[!NAS] {
 	@name = search_p12
-	@title = P-12 Yenisei Search Radar
+	@title = 1RL14 P-12 Yenisei Search Radar
 	@bdacategory = Radars
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 2.4
-	@description = P-12 Yenisei (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
+	@description = @description = The 1RL14 P-12 "Yenisei" (Spoon Rest A) Search Radar is a small VHF search radar that is more effective at closer ranges. Range is limited to 277.8km.
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-12 Search Radar
@@ -1052,12 +1052,12 @@ MODULE {
 //60s P-70 Lena-M EWR
 +PART[scanLargeRadar] {
 	@name = search_p70
-	@title = P-70 Lena-M Early Warning Radar
+	@title = 1RL117 P-70 Lena-M Early Warning Radar
 	@bdacategory = Radars
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@rescaleFactor = 12
-	@description = Huge Early Warning Radar with matching performance. Can detect fighter-sized targets at 149km. 
+	@description = The 1RL117 P-70 Lena-M was a huge Early Warning Radar with matching performance. Can detect fighter-sized targets at 149km. 
 	
 	@MODULE[ModuleRadar] {
 		radarName = P-70 Lena-M
