--- a/Missiles/sam_9M32.cfg
+++ b/Missiles/sam_9M32.cfg
@@ -1,47 +1,40 @@
-PART {
+﻿PART {
 	// Kerbal Space Program - Part Config
 	//
 	//
 
 	// --- general parameters ---
-	name = sam_9M8
+	name = sam_9M32
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_9M8
-	}
+		model = KKA/Missiles/sam_9M32
+	}		
 	NODE {
 		name = missileNode
 		transform = missileNode
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}
-	NODE {
-		name = missileNodeB
-		transform = missileNodeB
-		size = 0
-		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}
+	}	
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
 	entryCost = 2100
-	cost = 4000
-	bdacategory = Missiles
+	cost = 2400
 	category = none
+	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = 9M8 Krug
+	title = 9M32 Strela-2
 	manufacturer = Kerbal Kombat Anthology
-	description = The Lyulev Novator 3M8/9M8 "Krug" (SA-4) "Ganef" is a somewhat Short-Ranged SAM developed by the Soviets in the 60's. Perfect for dispatching large targets, for large targets, need a large missile. Warranty void if reffered to as a "thicc boi" in any capacity.
-	
+	description = The KBM 9M32 "Strela-2" missile of a 9K32 (SA-7) "Grail" complex using the 9P54 MANPADS is a Man-Portable or Vehicle Launched IR Guided SAM. Due to it's widespread availabity, it's seen action across the world and even today. Warranty void if used as an Anti-Tank weapon.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 2.45
+	mass = 0.0098
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -51,17 +44,28 @@ PART {
 
 	MODULE {
 		name = MissileLauncher
-		shortName = 9M8 Krug
+		shortName = 9K32 Strela-2
 		guidanceActive = true
 		
 		// --- Targeting ---
 		missileType = missile
 		homingType = aam
-		targetingType = radar
+		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 120
-		lockedSensorFOV = 20
+		maxOffBoresight = 70
+		lockedSensorFOV = 10
 		radarLOAL = false
+		
+		lockedSensorFOVBias {
+			key = 0 1 0 0
+			key = 3 0.8 0 0
+			key = 5 0.5 0 0
+        }
+        lockedSensorVelocityBias {
+            key = 0 1
+			key = 90 0.8
+			key = 180 0
+        }
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
@@ -69,47 +73,52 @@ PART {
 		terminalGuidanceType = heat
 		terminalGuidanceDistance = 0
 		
+
+		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 100
+		heatThreshold = 50
 		allAspect = false
+		deployAnimationName = deploy
+		deployedDrag = 0.02
+		deployTime = 0.5
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 30
-	
+		DetonationDistance = 1
+
 		// --- Propulsion ---
-		thrust = 450
-		cruiseThrust = 250
-		dropTime = 0
-		boostTime = 6
-		cruiseTime = 35
-		decoupleSpeed = 10
-		decoupleForward = true
+		thrust = 5.4
+		cruiseThrust = 1
+		dropTime = 0.1
+		boostTime = 1
+		cruiseTime = 6
+		decoupleSpeed = 5
+		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 1372
-		liftArea = 0.05
-		steerMult = 10
-		maxTorque = 300
-		maxAoA = 30	
-		maxTurnRateDPS = 30
+		optimumAirspeed = 430
+		liftArea = 0.002
+		steerMult = 2
+		maxTorque = 15
+		maxAoA = 15
+		maxTurnRateDPS = 15
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
-		decoupleBoosters = true
-		boosterMass = 1
+		decoupleBoosters = false
+		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
-		boostTransformName = 9M8 KrugB
+		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 8000
-		maxStaticLaunchRange = 55000
+		minStaticLaunchRange = 200
+		maxStaticLaunchRange = 3700
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -118,6 +127,6 @@ PART {
 
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 135
+		tntMass = 1.15
 	}
 }
