--- a/Missiles/ssm_9M14.cfg
+++ b/Missiles/ssm_9M14.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 9M14 Malyutka
 	manufacturer = Kerbal Kombat Anthology
-	description = The KBM 9M14"Malyutka" (AT-3) "Sagger" is a Soviet made ATGM developed in the 60's. It's been modified time and time again to adapt to the passage of time. It also takes the title of cheapest ATGM ever. Warranty void if used as a lawn dart.
+	description = The KBM 9M14 "Malyutka" (AT-3) "Sagger" of a 9K14 complex is a Soviet made ATGM developed in the 60's. It's been modified time and time again to adapt to the passage of time. It also takes the title of cheapest ATGM ever. Warranty void if used as a lawn dart.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
