--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -225,10 +225,10 @@
 //GSh-23L
 +PART[bahaHiddenVulcan]:FINAL {
 	@name = air_GSh23L
-	@title = GSh-23L
+	@title = 9-A-472 GSh-23L
 	@mass = 0.050
 	@manufacturer = Kerbal Kombat Anthology
-	@description = The Gryazev-Shipunov GSh-23 is a twin-barreled 23 mm autocannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
+	@description = The Gryazev-Shipunov 9-A-472/GSh-23/TKB-613/AO-9 is a twin-barreled 23 mm autocannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
 	@MODULE[ModuleWeapon] {
 		@shortName = GSh-23L
 		@roundsPerMinute = 3600
