--- a/Missiles/sam_3M8.cfg
+++ b/Missiles/sam_3M8.cfg
@@ -1,40 +1,47 @@
-﻿PART {
+PART {
 	// Kerbal Space Program - Part Config
 	//
 	//
 
 	// --- general parameters ---
-	name = sam_9K32
+	name = sam_3M8
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_9K32
-	}		
+		model = KKA/Missiles/sam_3M8
+	}
 	NODE {
 		name = missileNode
 		transform = missileNode
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}	
+	}
+	NODE {
+		name = missileNodeB
+		transform = missileNodeB
+		size = 0
+		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
+	}
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
 	entryCost = 2100
-	cost = 2400
-	category = none
+	cost = 4000
 	bdacategory = Missiles
+	category = none
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = 9K32 Strela-2
+	title = 3M8 Krug
 	manufacturer = Kerbal Kombat Anthology
-	description = The KBM 9K32 "Strela-2" (SA-7) "Grail" is a Man-Portable or Vehicle Launched IR Guided SAM. Due to it's widespread availabity, it's seen action across the world and even today. Warranty void if used as an Anti-Tank weapon.
+	description = The Lyulev Novator 3M8 missile of the 2K11 "Krug" (SA-4) "Ganef" system is a somewhat Short-Ranged SAM developed by the Soviets in the 60's. Perfect for dispatching large targets, for large targets, need a large missile. Warranty void if reffered to as a "thicc boi" in any capacity.
+	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.0098
+	mass = 2.45
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -44,28 +51,17 @@
 
 	MODULE {
 		name = MissileLauncher
-		shortName = 9K32 Strela-2
+		shortName = 9M8 Krug
 		guidanceActive = true
 		
 		// --- Targeting ---
 		missileType = missile
 		homingType = aam
-		targetingType = heat
+		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 70
-		lockedSensorFOV = 10
+		maxOffBoresight = 120
+		lockedSensorFOV = 20
 		radarLOAL = false
-		
-		lockedSensorFOVBias {
-			key = 0 1 0 0
-			key = 3 0.8 0 0
-			key = 5 0.5 0 0
-        }
-        lockedSensorVelocityBias {
-            key = 0 1
-			key = 90 0.8
-			key = 180 0
-        }
 		
 		//Terminal Guidance
 		terminalManeuvering = false // Shaking before hit to prevent CIWS.
@@ -73,52 +69,47 @@
 		terminalGuidanceType = heat
 		terminalGuidanceDistance = 0
 		
-
-		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 50
+		heatThreshold = 100
 		allAspect = false
-		deployAnimationName = deploy
-		deployedDrag = 0.02
-		deployTime = 0.5
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 1
-
+		DetonationDistance = 30
+	
 		// --- Propulsion ---
-		thrust = 5.4
-		cruiseThrust = 1
-		dropTime = 0.1
-		boostTime = 1
-		cruiseTime = 6
-		decoupleSpeed = 5
-		decoupleForward = false
+		thrust = 450
+		cruiseThrust = 250
+		dropTime = 0
+		boostTime = 6
+		cruiseTime = 35
+		decoupleSpeed = 10
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 430
-		liftArea = 0.002
-		steerMult = 2
-		maxTorque = 15
-		maxAoA = 15
-		maxTurnRateDPS = 15
+		optimumAirspeed = 1372
+		liftArea = 0.05
+		steerMult = 10
+		maxTorque = 300
+		maxAoA = 30	
+		maxTurnRateDPS = 30
 		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
-		decoupleBoosters = false
-		boosterMass = 0.7
+		decoupleBoosters = true
+		boosterMass = 1
 		boosterDecoupleSpeed = 2
-		boostTransformName = boostTransform
+		boostTransformName = 9M8 KrugB
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
-		maxStaticLaunchRange = 3700
+		minStaticLaunchRange = 8000
+		maxStaticLaunchRange = 55000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -127,6 +118,6 @@
 
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 1.15
+		tntMass = 135
 	}
 }
