--- a/Missiles/sam_3M9.cfg
+++ b/Missiles/sam_3M9.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 3M9M1 Kub
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel 3M9M1 "Kub-M1" (SA-6B) "Grainful" is a 60's Soviet short ranged Surface to Air missile. Good to use for defending tank battalions from imminent CAS-ing. Warranty void if used by a bear cub.
+	description = The Vympel 3M9M1 missile of the 2K12 "Kub-M1" (SA-6B) "Grainful" system is a 60's Soviet short ranged Surface to Air missile. Good to use for defending tank battalions from imminent CAS-ing. Warranty void if used by a bear cub.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
