--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -1,5 +1,8 @@
 //Radars, descriptions and overall update to new BDA standards.
 
+//TODO Did not balanced turret speeds and other variables, only made the mod use latest BDA functions.
+
+
 @PART[M163VADS]:NEEDS[SMA] {
     @MODULE[ModuleRadar] {
 		@directionalFieldOfView = 35
@@ -14,6 +17,10 @@
             key = 5 20 10.53343 11.25173
         } 
     }
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[ShilkaZSU234turret]:NEEDS[SMA] {
 	@title = 2A6 ZSU-23-4 Shilka
@@ -37,6 +44,10 @@
             key = 5 20 4.423522 2.503766
         } 
     }
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 
 //Title and description fixes.
@@ -52,6 +63,10 @@
 @PART[AAV7turret20]:NEEDS[SMA] {
 	@title = AAVP-7A1
 	@description = AAVP-7A1 20mm turreted machine gun, yeah i know, your eye is twitching, i know it shouldn't be a 20, but really we all know a .50's a waste of time on anything except kerbs and coke cans.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[AAVrightArmor]:NEEDS[SMA] {
 	@title = AAVP-7A1 Right Armor
@@ -65,18 +80,34 @@
 @PART[AK100a18]:NEEDS[SMA] {
 	@title = AK-100
 	@description = The AK-100 system with a A-214 Soviet 100mm naval cannon, with a maximum rate of fire of 60 rounds per minute, firing a 26.8 kg munition in HE anti-air or HE fragmentation varieties. Equipped on patrol ships of project 1135, project 1154, anti-submarine ships of project 1155, nuclear cruiser Admiral Ushakov and Admiral Gorshkov-class frigate.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[AK130turret]:NEEDS[SMA] {
 	@title = AK-130
 	@description = The AK-130 system with a A-217 Russian-built 130mm naval cannon is one of the most powerful gun systems used in the world today, with a maximum rate of fire of 80 rounds per minute, firing a 33 kg munition in HE anti-air or HE fragmentation varieties.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[AK230]:NEEDS[SMA] {
 	@title = AK-230
 	@description = The AK-230 is a Soviet fully automatic naval twin 30 mm gun. Its primary function is anti-aircraft. It is mounted in an enclosed automatic turret and directed by radar. AK-230 is widely used on big warships as well as small craft. About 1450 guns were produced in the USSR, and about 300 were produced in China as the Type 69. It was succeeded by the more powerful AK-630 from the mid-to-late 1970s.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[AK639QB1]:NEEDS[SMA] {
 	@title = AK-630
 	@description = The AK-630/A-213 is a Soviet and Russian fully automatic naval close-in weapon system based on a six-barreled 30 mm АО-18/GSh-6-30K rotary cannon. In "630", "6" means 6 barrels and "30" means 30 mm. The system's primary purpose is defense against anti-ship missiles and other precision guided weapons. However it can also be employed against fixed or rotary wing aircraft, ships and other small craft, coastal targets, and floating mines.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[AK230LowPlinth]:NEEDS[SMA] {
 	@title = AK-230/630 Low Plinth
@@ -87,6 +118,10 @@
 @PART[APC30Cg2A42]:NEEDS[SMA] {
 	@title = 2A42 TKB-648
 	@description = Shipunov 2A42 TKB-648 30mm automatic cannon is a Soviet/Russian gun used on BMP-2, BMP-3, BMD as well as BTR series of APCs and Attack Helicopters.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[BMP75mmTurret]:NEEDS[SMA] {
 	@title = BMP-1
@@ -96,10 +131,18 @@
 		%shortName = 2A28 "Grom" 73mm
 		@bulletType = 76.2MMMHEATFS
 	}
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[BradleyActive]:NEEDS[SMA] {
 	@title = M2 Bradley
 	@description = The M2 Bradley is an American infantry fighting vehicle that is a member of the Bradley Fighting Vehicle family. It is manufactured by BAE Systems Land & Armaments, which was formerly United Defense. The Bradley is designed for reconnaissance and to transport a squad of infantry, providing them protection from small arms fire, while also providing firepower to both suppress and eliminate most threats to friendly infantry. This turret uses, as per specification, BDA BGM-71 Tow Missile. Use of other missiles automatically invalidates your warranty. Use of other missiles may also result in R.U.D and possibly a scratch or bruise, maybe two. Please observe the safety instructions on the missile in the latest low observability microfont weight saving ink.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[BradleyHull]:NEEDS[SMA] {
 	@title = M2 Bradley
@@ -121,6 +164,10 @@
 }
 @PART[Eland90BTurret]:NEEDS[SMA] {
 	@title = Eland 90B
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[FV510Hull]:NEEDS[SMA] {
 	@title = FV 510 Warrior
@@ -129,6 +176,10 @@
 @PART[FV510Turret]:NEEDS[SMA] {
 	@title = FV 510 Warrior
 	@description = The Warrior tracked vehicle family is a series of British armoured vehicles featuring a 30 mm L21A1 RARDEN cannon, originally developed to replace the older FV430 series of armoured vehicles. Warrior was accepted for service with the British Army in November 1984.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[Humvee]:NEEDS[SMA] {
 	@title = HMMWV
@@ -137,10 +188,18 @@
 @PART[mk19Turret]:NEEDS[SMA] {
 	@title = Mk. 19 Grenade launcher
     @description = The Mk 19 grenade launcher is an American 40 mm belt-fed automatic grenade launcher that was first developed during the Vietnam War.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[HVUA30CG]:NEEDS[SMA] {
 	@title = GAU-19/A
     @description = The GAU-19/A (GECAL 50) is an electrically-driven, three-barrel rotary heavy machine gun that fires the .50 BMG (12.7×99mm) cartridge.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[KUB2K12]:NEEDS[SMA] {
 	@title = 2K12 Kub Hull
@@ -153,37 +212,51 @@
 @PART[Leopard2A6]:NEEDS[SMA] {
 	@title = Leopard 2A6
     @description = The Leopard 2A6 introduced in 2007 includes the addition of the Rheinmetall 120 mm L/55 smoothbore gun and other changes.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 2
+	}
 }
 @PART[M1SMA]:NEEDS[SMA] {
 	@title = M1A1 Abrams
 	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. It featured a new pressurized NBC system, rear bustle rack for improved stowage of supplies and crew belongings, redesigned blow-off panels and M256 120 mm smoothbore cannon.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 2
+	}
 }
 //ADD CASE explosions to the turrets!!!
 @PART[M1SM1Turret]:NEEDS[SMA] {
 	@title = M1 Abrams
 	@description = The M1 Abrams is a third-generation American main battle tank designed by Chrysler Defense. M1A1 production started in 1985 and continued to 1992. M1 was the first production variant. Production began in 1979 and continued to 1985. It featured 105 mm L/52 M68A1 rifled gun with 55 shells.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 1
+	}
 }
 @PART[M113Hull]:NEEDS[SMA] {
 	@title = M113 APC
 	@description = The M113 is a fully tracked armored personnel carrier that was developed and produced by the Food Machinery and Chemical Corporation. It was largely known as an "APC" or an "ACAV" (armored cavalry assault vehicle) by the allied forces.
 }
-//TODO check what gun it is actually
 @PART[M113GunTurret]:NEEDS[SMA] {
 	@title = M240E1 GPMG
     @description = The M240, officially the Machine Gun, 7.62 mm, M240, is the U.S. military designation for the FN MAG belt-fed, gas-operated medium machine guns. The M240 has been used extensively by infantry, most often in rifle companies, as well as on ground vehicles, watercraft and aircraft.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
-@PART[M163VADS]:NEEDS[SMA] {}
 @PART[AFVFlareCM]:NEEDS[SMA] {
     @title = Flare dispenser.
 }
 +PART[AFVFlareCM]:NEEDS[SMA] {
 	@name = AFVSmokeCM
 	@title = Smoke dispenser.
-	MODULE[CMDropper] {
+	@MODULE[CMDropper] {
 		@countermeasureType = smoke
 		@ejectVelocity = 8
 	}
-	RESOURCE[CMFlare] {
+	@RESOURCE[CMFlare] {
 		@name = CMSmoke
 	}
 }
@@ -223,26 +296,48 @@
 @PART[ShilkaZSUHull]:NEEDS[SMA] {
 	@title = 2A6 ZSU-23-4 Shilka Hull
 	@description = The 2A6 ZSU-23-4 "Shilka" vehicle hull.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[SMsT80Turret]:NEEDS[SMA] {
 	@title = T-80B
 	@description = T-90B is a Russian Federation main battle tank equipped with 125mm 2A46-2 smoothbore gun.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[T90MS]:NEEDS[SMA] {
 	@title = T-90AM
 	@description = T-90AM is a Russian Federation main battle tank equipped with 125mm 2A46M-5 smoothbore gun.
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
 }
 @PART[SMTunguskaAAMT]:NEEDS[SMA] {
 	@title = 2K22 Tunguska
-	@description = KBP 2K22 "Tunguska" (SA-19) "Grison" is a Russian tracked self-propelled anti-aircraft weapon armed with a surface-to-air gun and missile system. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
+	@description = KBP 2K22/2S6 "Tunguska" (SA-19) "Grison" is a Russian tracked self-propelled anti-aircraft weapon armed with a surface-to-air gun and missile system. It is designed to provide day and night protection for infantry and tank regiments against low-flying aircraft, helicopters, and cruise missiles in all weather conditions.
+	
+	MODULE {
+		name = ModuleCASE
+		CASELevel = 0
+	}
+	
+	@RESOURCE[30x165Ammo] {
+		amount = 1904
+		maxAmount = 1904
+	}
 }
 @PART[SMA57E6BGM]:NEEDS[SMA] {
-	@title = 57E6 Pantsir
-	@description = KBP 57E6 "Pantsir" (SA-22) "Greyhound" is two-stage solid fuel radio/optical command-guided surface-to-air missile in service from 2012 in Russian Federation Armed Forces.
+	@title = 9M335 Pantsir
+	@description = KBP 9M335/57E6 Surface-to-Air missile of the 96K6 "Pantsir-S1" (SA-22) "Greyhound" system is a two-stage solid fuel radio/optical command-guided missile in service from 2012 in Russian Federation Armed Forces.
 }
 @PART[AtakaAT]:NEEDS[SMA] {
 	@title = 9M120 Ataka
-	@description = KBM 9M120 "Ataka" (AT-9) "Spiral-2" is a Beam riding SACLOS missile designed to defeat tanks with composite armour and explosive reactive armor.
+	@description = KBM 9M120 "Ataka" (AT-9) "Spiral-2" is a Beam riding SACLOS missile designed to defeat tanks with composite armor and explosive reactive armor. Used with 9K120 system.
 }
 
 //Complete part overhauls.
